--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
       startit();
       stopit();
     </script>
-    <h3>Made by Neil Sudeep Sabde</h3>
+    <h3>Created by Neil Sudeep Sabde</h3>
   </body>
 </html>
